spacing fixes and home link

--- a/UI/Web/src/app/side-nav/side-nav.component.scss
+++ b/UI/Web/src/app/side-nav/side-nav.component.scss
@@ -1,6 +1,6 @@
 .side-nav {
     padding: 10px;
-    width: 150px;
+    width: 190px;
     background-color: rgba(0,0,0,0.6);
     height: calc(100vh - 58px);
     position: fixed;
@@ -35,13 +35,13 @@
             display: flex;
             flex-shrink: 0;
             height: 100%;
-            justify-content: center;
+            justify-content: inherit;
 
             i {
                 font-size: 18px;
             }
         }
-        
+
         &:last-child {
             flex-grow: 1;
             justify-content: end;
